# VB6_Arduino

./: .gitignore  ARRAY_SUPPORT.md  BUILD.md  LICENSE  README.md  RELEASES.md  build_executable.bat  build_executable.sh  build_hello.sh  export_called.txt  pr_body.md  pyproject.toml  test_qt_minimal.py  vb2arduino-ide.spec
.github/: copilot-instructions.md
docs/: USER_GUIDE.md  programmers_reference.md
examples/: autocomplete_demo.vb  lcd_hello.vb  lcd_simple.vb  procedure_test.vb  pwdongle_port.vb  serial_hello.vb  serial_test.vb  tree_view_demo.vb
generated_boing_s3/: main.cpp  main_sync.cpp  platformio.ini
generated_boing_s3_temp/: main.cpp
generated_enhancements/: main.cpp
generated_math/: main.cpp
generated_rgb/: main.cpp
generated_select_case/: main.cpp
generated_servo/: main.cpp
generated_servo_lib/: main.cpp
generated_test/: main.cpp
generated_test2/: main.cpp
generated_test3/: main.cpp
generated_test4/: main.cpp
generated_test5/: main.cpp
generated_test6/: main.cpp
generated_test7/: main.cpp
generated_test8/: platformio.ini
generated_test_smoke/: main.cpp
handlers/: Button_Click.bas
resources/: pinout_arduino-uno.csv  pinout_due.csv  pinout_esp32-s3-devkitm-1.csv  pinout_esp32dev.csv  pinout_leonardo.csv  pinout_megaatmega2560.csv  pinout_micro.csv  pinout_mkr1000.csv  pinout_mkrwifi1010.csv  pinout_nano_33_iot.csv  pinout_nanoatmega328.csv  pinout_pico.csv  pinout_pro16MHzatmega328.csv  pinout_zero.csv
scripts/: generate_visual_designer_screenshots.py  test_transpile_compile.py  verify_ide_compile.py
(+113 files in other folders)
